--- a/index.html
+++ b/index.html
@@ -9,6 +9,97 @@
 </head>
 
 <body>
+    <header class="navbar">
+        <h2 class="navbar__logo">
+            <a href="index.html">BANDSITE</a>
+        </h2>
+        <nav>
+            <ul>
+                <li class="navbar--active"><a href="#about">Biography</a></li>
+                <li><a href="#shows">Shows</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="hero">
+            <div>The Bees Knees</div>
+        </section>
+        
+        <section class="about">
+            <div class="about__header">
+                About the Musicians
+            </div>
+            <img alt="about musicians" src="./assets/images/band.jpg">
+            <div class="about__quote">
+                <p>
+                    “We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”
+                </p>
+                <p>- Lead vocalist of The Bees Knees</p>
+            </div>
+            <div class="about__description">
+                <h3>The Bees Knees</h3>
+                <p>
+                    The Bees Knees is a pop rock band originating from San Francisco, California. The band consists a dynamic lineup featuring two lead vocalists, two guitarists, a bassist, a keyboardist and a drummer. The band achieved its first commercial success as an unsigned act, drawing attention from their future manager. Having extensive experience working with both new and seasoned acts, the manager was confident the band could succeed even further with more support, pushing The Bees Knees to sign with a well known record label.
+                </p>
+                <p>
+                    From there, the band has soared, gaining international recognition and ranking in the top 10 on the Poster Charts. New fans immediately fell in love with the band’s original and organic attitude, solidifying their place as one of the hottest and fastest up and coming acts of this century. Fans affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic performances on stage. The Bees Knees are currently recording their second studio album, looking to be released in early 2024.
+                </p>
+            </div>
+        </section>
+
+        <section class="photo">
+            <div class="photo__header">
+                Photo Gallery
+            </div>
+            <div class="photo__gallery">
+                <img alt="photo gallary 1" src="./assets/images/Photo-gallery-1.jpg">
+                <img alt="photo gallary 2" src="./assets/images/Photo-gallery-2.jpg">
+                <img alt="photo gallary 3" src="./assets/images/Photo-gallery-3.jpg">
+                <img alt="photo gallary 4" src="./assets/images/Photo-gallery-4.jpg">
+                <img alt="photo gallary 5" src="./assets/images/Photo-gallery-5.jpg">
+                <img alt="photo gallary 6" src="./assets/images/Photo-gallery-6.jpg">
+                <img alt="photo gallary 7" src="./assets/images/Photo-gallery-7.jpg">
+                <img alt="photo gallary 8" src="./assets/images/Photo-gallery-8.jpg">
+                <img alt="photo gallary 9" src="./assets/images/Photo-gallery-9.jpg">
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <div class="footer__header">
+            Get In Touch
+        </div>
+        <div class="footer__social">
+            <img alt="instagram" src="./assets/icons/Icon-instagram.svg">
+            <img alt="facebook" src="./assets/icons/Icon-facebook.svg">
+            <img alt="twitter" src="./assets/icons/Icon-twitter.svg">
+        </div>
+        <div>
+            <div class="footer__contact">
+                <h3>The Bees Knees Management</h3>
+                <p>503 Broadway Penthouse,<br>New York, NY 10012, USA</p>
+                <p>info@thebeesknees.com</p>
+            </div>
+            <div class="footer__contact">
+                <h3>Limitless Artist Group</h3>
+                <p>Booking Agent for<br>US / South America / Japan</p>
+                <p>bookings@limitlessag.com</p>
+            </div>
+            <div class="footer__contact">
+                <h3>ARCH Entertainment</h3>
+                <p>Booking Agent for<br>UK / EU / AU</p>
+                <p>bookings@archentertainment.com</p>
+            </div>
+        </div>
+        <div class="footer__logo">
+            BANDSITE
+        </div>
+        <div class="footer__copyright">
+            <p>Copyright The Bees Knees © 2023 All Rights Reserved</p>
+        </div>
+    </footer>
+
 </body>
 
 </html>
