--- a/index.html
+++ b/index.html
@@ -79,17 +79,23 @@
             <div class="footer__contact">
                 <h3>The Bees Knees Management</h3>
                 <p>503 Broadway Penthouse,<br>New York, NY 10012, USA</p>
-                <p>info@thebeesknees.com</p>
+                <p>
+                    <a href="mailto:info@thebeesknees.com">info@thebeesknees.com</a>
+                </p>
             </div>
             <div class="footer__contact">
                 <h3>Limitless Artist Group</h3>
                 <p>Booking Agent for<br>US / South America / Japan</p>
-                <p>bookings@limitlessag.com</p>
+                <p>
+                    <a href="mailto:bookings@limitlessag.com">bookings@limitlessag.com</a>
+                </p>
             </div>
             <div class="footer__contact">
                 <h3>ARCH Entertainment</h3>
                 <p>Booking Agent for<br>UK / EU / AU</p>
-                <p>bookings@archentertainment.com</p>
+                <p>
+                    <a href="mailto:bookings@archentertainment.com">bookings@archentertainment.com</a>
+                </p>
             </div>
         </div>
         <div class="footer__logo">
