Add updates for footer for tablet and desktop

--- a/index.html
+++ b/index.html
@@ -77,31 +77,29 @@
             <img alt="facebook" src="./assets/icons/Icon-facebook.svg">
             <img alt="twitter" src="./assets/icons/Icon-twitter.svg">
         </div>
-        <div>
-            <div class="footer__contact">
-                <h3>The Bees Knees Management</h3>
-                <p>503 Broadway Penthouse,<br>New York, NY 10012, USA</p>
-                <p>
-                    <a href="mailto:info@thebeesknees.com">info@thebeesknees.com</a>
-                </p>
-            </div>
-            <div class="footer__contact">
-                <h3>Limitless Artist Group</h3>
-                <p>Booking Agent for<br>US / South America / Japan</p>
-                <p>
-                    <a href="mailto:bookings@limitlessag.com">bookings@limitlessag.com</a>
-                </p>
-            </div>
-            <div class="footer__contact">
-                <h3>ARCH Entertainment</h3>
-                <p>Booking Agent for<br>UK / EU / AU</p>
-                <p>
-                    <a href="mailto:bookings@archentertainment.com">bookings@archentertainment.com</a>
-                </p>
-            </div>
-        </div>
         <div class="footer__logo">
             BANDSITE
+        </div>
+        <div class="footer__contact">
+            <h3>The Bees Knees Management</h3>
+            <p>503 Broadway Penthouse,<br>New York, NY 10012, USA</p>
+            <p>
+                <a href="mailto:info@thebeesknees.com">info@thebeesknees.com</a>
+            </p>
+        </div>
+        <div class="footer__contact">
+            <h3>Limitless Artist Group</h3>
+            <p>Booking Agent for<br>US / South America / Japan</p>
+            <p>
+                <a href="mailto:bookings@limitlessag.com">bookings@limitlessag.com</a>
+            </p>
+        </div>
+        <div class="footer__contact footer__contact--right">
+            <h3>ARCH Entertainment</h3>
+            <p>Booking Agent for<br>UK / EU / AU</p>
+            <p>
+                <a href="mailto:bookings@archentertainment.com">bookings@archentertainment.com</a>
+            </p>
         </div>
         <div class="footer__copyright">
             <p>Copyright The Bees Knees © 2023 All Rights Reserved</p>
