add shows page with table

--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Bees Knees - Official Band Site</title>
-    <link rel="stylesheet" href="styles/bio.css">
+    <link rel="stylesheet" href="./styles/bio.css">
     <script src="./scripts/index-page.js" defer></script>
 </head>
 
 <body>
     <header class="navbar">
         <h2 class="navbar__logo">
-            <a href="index.html">BANDSITE</a>
+            <a href="./index.html">BANDSITE</a>
         </h2>
         <nav>
             <ul>
-                <li class="navbar--active"><a href="#about">Biography</a></li>
-                <li><a href="#shows">Shows</a></li>
+                <li class="navbar--active"><a href="./index.html">Biography</a></li>
+                <li><a href="./pages/shows.html">Shows</a></li>
             </ul>
         </nav>
     </header>
