add shows for mobile device

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -48,43 +48,8 @@
                     
                 </tbody>
             </table>
+            <div class="shows__list"></div>
         </section>
-
-        <!-- <section class="comments">
-            <h2>Join the Conversation</h2>
-            <div class="comments__comments-list">
-                <div class="comments__divider"></div>
-                <div class="comments__comment-item">
-                    <div class="comments__comment-avatar"></div>
-                    <div class="comments__comment-section">
-                        <div class="comments__comment-header">
-                            <h3 class="comments__comment-header-name">Victor Pinto</h3>
-                            <div class="comments__comment-header-timestamp">11/02/2023</div>
-                        </div>
-                        <div class="comments__comment-content">
-                            This is art. This is inexplicable magic expressed in the purest way, everything that makes
-                            up this majestic work deserves reverence. Let us appreciate this for what it is and what it
-                            contains.
-                        </div>
-                    </div>
-                </div>
-                <div class="comments__divider"></div>
-                <div class="comments__comment-item">
-                    <div class="comments__comment-avatar"></div>
-                    <div class="comments__comment-section">
-                        <div class="comments__comment-header">
-                            <h3 class="comments__comment-header-name">Christina Cabrera</h3>
-                            <div class="comments__comment-header-timestamp">10/28/2023</div>
-                        </div>
-                        <div class="comments__comment-content">
-                            I feel blessed to have seen them in person. What a show! They were just perfection. If there
-                            was one day of my life I could relive, this would be it. What an incredible day.
-                        </div>
-                    </div>
-                </div>
-                <div class="comments__divider"></div>
-            </div>
-        </section> -->
     </main>
 
     <footer class="footer">
