--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>The Bees Knees - Official Band Site</title>
     <link rel="stylesheet" href="./styles/bio.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="./scripts/band-site-api.js" defer></script>
     <script src="./scripts/index-page.js" defer></script>
 </head>
 
