--- a/pages/shows.html
+++ b/pages/shows.html
@@ -7,6 +7,8 @@
     <title>The Bees Knees - Official Band Site</title>
     <link rel="stylesheet" href="../styles/bio.css">
     <link rel="stylesheet" href="../styles/show.css">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="../scripts/band-site-api.js" defer></script>
     <script src="../scripts/build-shows-page.js" defer></script>
 </head>
 
