address feedback from sprint-2

--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
                 Photo Gallery
             </h2>
             <div class="photo__gallery">
-                <img alt="photo gallary 1" src="./assets/images/Photo-gallery-1.jpg">
-                <img alt="photo gallary 2" src="./assets/images/Photo-gallery-2.jpg">
-                <img alt="photo gallary 3" src="./assets/images/Photo-gallery-3.jpg">
-                <img alt="photo gallary 4" src="./assets/images/Photo-gallery-4.jpg">
-                <img alt="photo gallary 5" src="./assets/images/Photo-gallery-5.jpg">
-                <img alt="photo gallary 6" src="./assets/images/Photo-gallery-6.jpg">
-                <img alt="photo gallary 7" src="./assets/images/Photo-gallery-7.jpg">
-                <img alt="photo gallary 8" src="./assets/images/Photo-gallery-8.jpg">
-                <img alt="photo gallary 9" src="./assets/images/Photo-gallery-9.jpg">
+                <img src="./assets/images/Photo-gallery-1.jpg" alt="Crowd of people enjoying a live concert with hands raised against a backdrop of magenta stage lights.">
+                <img src="./assets/images/Photo-gallery-2.jpg" alt="A woman in euphoria with arms raised, dancing at an outdoor festival with a cyan-tinted smoke background.">
+                <img src="./assets/images/Photo-gallery-3.jpg" alt="Silhouetted concertgoers raising their hands towards a pink-lit stage, immersed in the event.">
+                <img src="./assets/images/Photo-gallery-4.jpg" alt="Back view of a person at a concert waving towards a brightly lit stage with white beams of light.">
+                <img src="./assets/images/Photo-gallery-5.jpg" alt="Excited audience with hands up enjoying a concert with a vibrant display of fireworks and confetti in the background.">
+                <img src="./assets/images/Photo-gallery-6.jpg" alt="A single hand raised high during a concert, set against a moody backdrop of fog and purple stage lighting.">
+                <img src="./assets/images/Photo-gallery-7.jpg" alt="Vividly colored stage lights illuminating a jubilant crowd during a night concert with laser beams cutting through the scene.">
+                <img src="./assets/images/Photo-gallery-8.jpg" alt="Close-up of a DJ's hand adjusting equipment on a deck with red and purple lighting enhancing the mood.">
+                <img src="./assets/images/Photo-gallery-9.jpg" alt="A lively concert crowd with hands up, surrounded by a flurry of white confetti, enjoying the moment.">
             </div>
         </section>
 
@@ -117,9 +117,9 @@
             Get In Touch
         </h2>
         <div class="footer__social">
-            <img alt="instagram" src="./assets/icons/Icon-instagram.svg">
-            <img alt="facebook" src="./assets/icons/Icon-facebook.svg">
-            <img alt="twitter" src="./assets/icons/Icon-twitter.svg">
+            <img alt="footer instagram icon" src="./assets/icons/Icon-instagram.svg">
+            <img alt="footer facebook icon" src="./assets/icons/Icon-facebook.svg">
+            <img alt="footer twitter icon" src="./assets/icons/Icon-twitter.svg">
         </div>
         <div class="footer__logo">
             BANDSITE
