--- a/pages/shows.html
+++ b/pages/shows.html
@@ -30,8 +30,8 @@
             <h3>Beautiful Beasts Album</h3>
             <div class="hero__sound-wrapper">
                 <h2 class="hero__content">Stripes of Yellow x For The Stings</h2>
-                <iframe width="100%" height="200" scrolling="no" frameborder="no" allow="autoplay"
-                    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/204428618&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
+                <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+                    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/204428618&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true">
                 </iframe>
             </div>
         </section>
@@ -59,9 +59,9 @@
             Get In Touch
         </h2>
         <div class="footer__social">
-            <img alt="instagram" src="../assets/icons/Icon-instagram.svg">
-            <img alt="facebook" src="../assets/icons/Icon-facebook.svg">
-            <img alt="twitter" src="../assets/icons/Icon-twitter.svg">
+            <img alt="footer instagram icon" src="../assets/icons/Icon-instagram.svg">
+            <img alt="footer facebook icon" src="../assets/icons/Icon-facebook.svg">
+            <img alt="footer twitter icon" src="../assets/icons/Icon-twitter.svg">
         </div>
         <div class="footer__logo">
             BANDSITE
