--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
 </head>
 
 <body>
-    <header class="navbar">
-        <h2 class="navbar__logo">
-            <a href="./index.html">BANDSITE</a>
-        </h2>
-        <nav>
-            <ul>
-                <li class="navbar--active"><a href="./index.html">Biography</a></li>
-                <li><a href="./pages/shows.html">Shows</a></li>
+    <header class="header">
+        <a class="header__logo" href="./index.html">BANDSITE</a>
+        <nav class="navbar">
+            <ul class="navbar__list">
+                <li class="navbar__item">
+                    <a class="navbar__link navbar__link--active" href="./index.html">Biography</a>
+                </li>
+                <li class="navbar__item">
+                    <a class="navbar__link" href="./pages/shows.html">Shows</a>
+                </li>
             </ul>
         </nav>
     </header>
