--- a/pages/shows.html
+++ b/pages/shows.html
@@ -13,14 +13,16 @@
 </head>
 
 <body>
-    <header class="navbar">
-        <h2 class="navbar__logo">
-            <a href="../index.html">BANDSITE</a>
-        </h2>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Biography</a></li>
-                <li class="navbar--active"><a href="./shows.html">Shows</a></li>
+    <header class="header">
+        <a class="header__logo" href="../index.html">BANDSITE</a>
+        <nav class="navbar">
+            <ul class="navbar__list">
+                <li class="navbar__item">
+                    <a class="navbar__link" href="../index.html">Biography</a>
+                </li>
+                <li class="navbar__item">
+                    <a class="navbar__link navbar__link--active" href="./shows.html">Shows</a>
+                </li>
             </ul>
         </nav>
     </header>
