address feedback from sprint-1

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -39,7 +39,9 @@
         </section>
 
         <section class="shows">
-            <h2>Shows</h2>
+            <div class="shows__header">
+                Shows
+            </div>
             <table class="shows__table">
                 <thead>
                     <tr>
@@ -57,9 +59,9 @@
     </main>
 
     <footer class="footer">
-        <h2 class="footer__header">
+        <div class="footer__header">
             Get In Touch
-        </h2>
+        </div>
         <div class="footer__social">
             <img alt="footer instagram icon" src="../assets/icons/Icon-instagram.svg">
             <img alt="footer facebook icon" src="../assets/icons/Icon-facebook.svg">
@@ -89,9 +91,9 @@
                 <a href="mailto:bookings@archentertainment.com">bookings@archentertainment.com</a>
             </p>
         </div>
-        <div class="footer__copyright">
-            <p>Copyright The Bees Knees © 2023 All Rights Reserved</p>
-        </div>
+        <p class="footer__copyright">
+            Copyright The Bees Knees © 2023 All Rights Reserved
+        </p>
     </footer>
 
 </body>
