--- a/index.html
+++ b/index.html
@@ -32,21 +32,21 @@
         </section>
 
         <section class="about">
-            <h2 class="about__header">
+            <div class="about__header">
                 About the Musicians
-            </h2>
+            </div>
             <div class="about__content">
                 <img alt="about musicians" src="./assets/images/band.jpg">
-                <div class="about__quote">
-                    <p>
+                <div>
+                    <p class="about__quote">
                         “We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be
                         better, back to the drawing board’”
                     </p>
                     <p class="about__musician">- Lead vocalist of The Bees Knees</p>
                 </div>
                 <div class="about__description">
-                    <h3>The Bees Knees</h3>
-                    <p>
+                    <div class="about__description-title">The Bees Knees</div>
+                    <p class="about__description-content">
                         The Bees Knees is a pop rock band originating from San Francisco, California. The band consists
                         a dynamic lineup featuring two lead vocalists, two guitarists, a bassist, a keyboardist and a
                         drummer. The band achieved its first commercial success as an unsigned act, drawing attention
@@ -54,7 +54,7 @@
                         the manager was confident the band could succeed even further with more support, pushing The
                         Bees Knees to sign with a well known record label.
                     </p>
-                    <p>
+                    <p class="about__description-content">
                         From there, the band has soared, gaining international recognition and ranking in the top 10 on
                         the Poster Charts. New fans immediately fell in love with the band’s original and organic
                         attitude, solidifying their place as one of the hottest and fastest up and coming acts of this
@@ -67,9 +67,9 @@
         </section>
 
         <section class="photo">
-            <h2 class="photo__header">
+            <div class="photo__header">
                 Photo Gallery
-            </h2>
+            </div>
             <div class="photo__gallery">
                 <img src="./assets/images/Photo-gallery-1.jpg" alt="Crowd of people enjoying a live concert with hands raised against a backdrop of magenta stage lights.">
                 <img src="./assets/images/Photo-gallery-2.jpg" alt="A woman in euphoria with arms raised, dancing at an outdoor festival with a cyan-tinted smoke background.">
@@ -84,7 +84,9 @@
         </section>
 
         <section class="comments">
-            <h2>Join the Conversation</h2>
+            <div class="comments__header">
+                Join the Conversation
+            </div>
             <div class="comments__wrapper">
                 <div class="comments__comment-form-wrapper">
                     <div class="comments__comment-avatar comments__comment-avatar--form"></div>
@@ -115,9 +117,9 @@
     </main>
 
     <footer class="footer">
-        <h2 class="footer__header">
+        <div class="footer__header">
             Get In Touch
-        </h2>
+        </div>
         <div class="footer__social">
             <img alt="footer instagram icon" src="./assets/icons/Icon-instagram.svg">
             <img alt="footer facebook icon" src="./assets/icons/Icon-facebook.svg">
@@ -147,9 +149,9 @@
                 <a href="mailto:bookings@archentertainment.com">bookings@archentertainment.com</a>
             </p>
         </div>
-        <div class="footer__copyright">
-            <p>Copyright The Bees Knees © 2023 All Rights Reserved</p>
-        </div>
+        <p class="footer__copyright">
+            Copyright The Bees Knees © 2023 All Rights Reserved
+        </p>
     </footer>
 
 </body>
